
pandoc-fignos 0.2.2 (2015-06-07)

    * Added README.md and LICENSE to MANIFEST.in so that they
      get distributed via pip.


pandoc-fignos 0.2.1 (2015-06-03)

    * Included missing install dependency in MANIFEST.in.
    * Updated documentation.


pandoc-fignos 0.2 (2015-06-01)

    * Permit generic figure labeling (e.g., {#fig:}).
    * Fixed crash that occurs when reference info is contained in
      the yaml header.
    * Updated documentation.
    * Made release available through pypi.


pandoc-fignos 0.1 (2015-03-14)

    * initial release
