@@ -6,7 +6,7 @@ pandoc-fignos
 
 Demonstration: Using [`demo.md`] as input gives output files in [pdf], [tex], [html], [epub], [md] and other formats.
 
-This version of pandoc-fignos was tested using pandoc 1.14.0.1.
+This version of pandoc-fignos was tested using pandoc 1.15.0.5 and is known to work under linux, Mac OS X and Windows.
 
 See also: [pandoc-eqnos], [pandoc-tablenos]
 
@@ -91,6 +91,8 @@ Links are not constructed -- just the figure numbers.
 Installation
 ------------
 
+Pandoc requires [python], a programming language that comes pre-installed on linux and Mac OS X, and which is easily installed [on Windows].  Either python 2.7 or 3.x will do.
+
 Install pandoc-fignos as root using the bash command
 
     pip install pandoc-fignos 
@@ -99,11 +101,13 @@ To upgrade to the most recent release, use
 
     pip install --upgrade pandoc-fignos 
 
-Pip is a script that downloads and installs modules from the Python Package Index, [PyPI].  It should come installed with your python distribution.  If you are running linux, pip may be bundled separately.  For example, on a Debian-based system (including Ubuntu), you can install it as root using
+Pip is a script that downloads and installs modules from the Python Package Index, [PyPI].  It should come installed with your python distribution.  If you are running linux, pip may be bundled separately.  On a Debian-based system (including Ubuntu), you can install it as root using
 
     apt-get update
     apt-get install python-pip
 
+[python]: https://www.python.org/
+[on Windows]: https://www.python.org/downloads/windows/
 [PyPI]: https://pypi.python.org/pypi
 
 
