@@ -1,4 +1,10 @@
 
+unreleased
+
+    * Enforce pandoc's requirement of UTF-8 (pandoc-fignos
+      Issue #4)
+
+
 pandoc-fignos 0.2.2 (2015-06-07)
 
     * Added README.md and LICENSE to MANIFEST.in so that they
